<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="22dp"
        tools:context=".Activities.SearchActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/search_view"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerGames">

            <Button
                    android:id="@+id/prev_search"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prev" />

            <Button
                    android:id="@+id/currrentPage_search"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/one" />

            <Button
                    android:id="@+id/next_search"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>


    <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:queryHint="@string/game_name_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner" />

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_games"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/spinner"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/present_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtTotal"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>