<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="17dp"
        tools:context=".Activities.PopularGamesActivity">


    <LinearLayout
            android:id="@+id/most_popular_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_total_popular">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_games_view"
                android:layout_width="match_parent"
                android:layout_height="620dp" />

        <LinearLayout
                android:id="@+id/pages_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="@id/most_popular_layout"
                app:layout_constraintRight_toRightOf="@id/most_popular_layout">

            <Button
                    android:id="@+id/prev"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prev"
                    app:layout_constraintRight_toLeftOf="@+id/currrentPage" />

            <Button
                    android:id="@+id/currrentPage"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="@string/one" />

            <Button
                    android:id="@+id/next"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    app:layout_constraintLeft_toRightOf="@+id/currrentPage" />

        </LinearLayout>


    </LinearLayout>

    <TextView
            android:id="@+id/txt_total_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/total_games"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/present_total_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zero_value"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_total_popular"
            app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>